# gplanetary-nav

./: .gitignore  LICENSE  README.md  environment.core.yaml  environment.local.yaml  pyproject.toml  setup.cfg
config/: paths_config.yaml
data/: data_readme.md
docs/: 05-site_loader_demo.ipynb  25-solar_power_demo.ipynb
docs/.ipynb_checkpoints/: 00-site_gen-checkpoint.ipynb  10-site_graph_demo-checkpoint.ipynb  25-solar_power_demo-checkpoint.ipynb
gplanetary_nav/: utils.py
gplanetary_nav/cost/: base_cost.py
gplanetary_nav/cost/energy/: __init__.py  constant.py
gplanetary_nav/cost/time/: __init__.py  constant.py  gaussianpdf_velocity.py  mttt.py  random_cost.py
gplanetary_nav/dataset/: __init__.py  crop.py  extend_irradiance.py
gplanetary_nav/dev/: models.py  paths_config.py
gplanetary_nav/graph/: grid_graph.py
gplanetary_nav/planning/: types.py
gplanetary_nav/site/: generator.py  loader.py  spoc_mapping.py
gplanetary_nav/site/layers/: __init__.py  aspect.py  base.py  cfa.py  dem.py  nogo.py  slope.py  terrain.py
gplanetary_nav/solar/: __init__.py  ephemeris.py  loader.py  numba_energy.py  preprocessing.py  utils.py
logs/: logging_readme.md
params/: dummy_rover.yaml  rover.yaml  world.yaml  world_mttt.yaml
