[metadata]
name = gplanetary_nav
version = 0.0.1
authors = [
    { name="Olivier Lamarre", email="olivier.lamarre@robotics.utias.utoronto.ca" },]
description = Interface with georeferenced terrain and insolation maps of planetary surfaces in support of global navigation planning.
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",]

[project.urls]
"Homepage" = "https://github.com/utiasSTARS/gplanetary-nav.git"

[options]
packages = find:
python_requires = >=3.7

